--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-  <div class="header">
-    <h3 >PRICE TAG SAMPLE TASK</h3>
-  </div>
-  <div class = 'containsCards'>
-  <app-price-tag></app-price-tag>
+    <app-nav-bar></app-nav-bar>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  <div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
