--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link" routerLink="about" style="color:white ;"><b>About</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="product" style="color:white ;"><b>Sample Post</b></a>
+            <a class="nav-link" routerLink="product" style="color:white ;"><b>Product</b></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="contact" style="color:white ;"><b>Contact</b></a>
